--- a/index.html
+++ b/index.html
@@ -347,6 +347,40 @@
             border-radius: 8px;
             cursor: pointer;
         }
+        .admin-panel {
+            background: rgba(26, 26, 26, 0.9);
+            padding: 20px;
+            border-radius: 15px;
+            margin-bottom: 30px;
+            border: 2px solid #ffd700;
+            box-shadow: 0 4px 8px rgba(255,215,0,0.3);
+        }
+        .admin-panel h2 {
+            color: #ffd700;
+            margin-top: 0;
+        }
+        .admin-section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: rgba(42, 42, 42, 0.8);
+            border-radius: 10px;
+        }
+        .admin-section h3 {
+            color: #ffd700;
+            margin-top: 0;
+        }
+        .admin-section button {
+            background: #ff6b6b;
+            color: #fff;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-right: 10px;
+        }
+        .admin-section button:hover {
+            background: #cc5555;
+        }
     </style>
 </head>
 <body>
@@ -375,6 +409,7 @@
         <div class="tabs">
             <button class="tab-btn active" onclick="switchTab('questions')">Вопросы</button>
             <button class="tab-btn" onclick="switchTab('complaints')">Жалобы</button>
+            <button class="tab-btn" id="adminTabBtn" onclick="switchTab('admin')" style="display: none;">Админ</button>
         </div>
 
         <div id="questionsTab" class="tab-content active">
@@ -405,6 +440,24 @@
 
             <div class="complaints-list" id="complaintsList">
                 <!-- Жалобы будут добавляться сюда -->
+            </div>
+        </div>
+
+        <div id="adminPanel" class="admin-panel" style="display: none;">
+            <h2><i class="fas fa-cogs"></i> Панель администратора</h2>
+            <div class="admin-section">
+                <h3>Статистика</h3>
+                <p>Пользователей: <span id="userCount">0</span></p>
+                <p>Вопросов: <span id="questionCount">0</span></p>
+                <p>Жалоб: <span id="complaintCount">0</span></p>
+            </div>
+            <div class="admin-section">
+                <h3>Управление пользователями</h3>
+                <div id="userList"></div>
+            </div>
+            <div class="admin-section">
+                <h3>Действия</h3>
+                <button onclick="clearAllData()">Очистить все данные</button>
             </div>
         </div>
     </div>
@@ -439,6 +492,11 @@
                 const text = document.getElementById('questionText').value;
                 const user = isUserLoggedIn() ? JSON.parse(localStorage.getItem('currentUser')).username : 'Аноним';
 
+                // Проверка cooldown
+                if (!checkCooldown(user)) {
+                    return;
+                }
+
                 const question = {
                     id: Date.now(),
                     title: title,
@@ -450,6 +508,7 @@
 
                 saveQuestion(question);
                 displayQuestion(question);
+                updateLastPostTime(user);
 
                 questionForm.reset();
             });
@@ -461,6 +520,11 @@
                 const text = document.getElementById('complaintText').value;
                 const fileInput = document.getElementById('complaintFile');
                 const user = isUserLoggedIn() ? JSON.parse(localStorage.getItem('currentUser')).username : 'Аноним';
+
+                // Проверка cooldown
+                if (!checkCooldown(user)) {
+                    return;
+                }
 
                 const complaint = {
                     id: Date.now(),
@@ -484,6 +548,7 @@
                             if (complaint.files.length === fileInput.files.length) {
                                 saveComplaint(complaint);
                                 displayComplaint(complaint);
+                                updateLastPostTime(user);
                                 complaintForm.reset();
                             }
                         };
@@ -492,6 +557,7 @@
                 } else {
                     saveComplaint(complaint);
                     displayComplaint(complaint);
+                    updateLastPostTime(user);
                     complaintForm.reset();
                 }
             });
@@ -563,9 +629,17 @@
                     <h3><i class="fas fa-exclamation-triangle"></i> ${complaint.title}</h3>
                     <p>${complaint.text}</p>
                     <small><i class="fas fa-user"></i> Пользователь: ${complaint.user} | <i class="fas fa-clock"></i> Подана: ${complaint.timestamp}</small>
+                    <div class="moderation-btns" style="display: none;">
+                        <button onclick="editComplaint(${complaint.id})"><i class="fas fa-edit"></i> Редактировать</button>
+                        <button onclick="deleteComplaint(${complaint.id})"><i class="fas fa-trash"></i> Удалить</button>
+                    </div>
                     ${filesHtml}
                 `;
                 complaintsList.appendChild(complaintDiv);
+                // Показать кнопки модерации только админам
+                if (localStorage.getItem('adminLoggedIn') === 'true') {
+                    complaintDiv.querySelector('.moderation-btns').style.display = 'block';
+                }
             }
 
             window.addAnswer = function(questionId, answerText) {
@@ -608,6 +682,18 @@
                 if (!localStorage.getItem('users')) {
                     localStorage.setItem('users', JSON.stringify([]));
                 }
+                // Обновить существующих пользователей, добавив lastPostTime если отсутствует
+                const users = JSON.parse(localStorage.getItem('users') || '[]');
+                let updated = false;
+                users.forEach(user => {
+                    if (!user.hasOwnProperty('lastPostTime')) {
+                        user.lastPostTime = null;
+                        updated = true;
+                    }
+                });
+                if (updated) {
+                    localStorage.setItem('users', JSON.stringify(users));
+                }
             }
 
             function isUserLoggedIn() {
@@ -626,7 +712,7 @@
                     alert('Пользователь с таким логином уже существует!');
                     return;
                 }
-                users.push({ username, password });
+                users.push({ username, password, lastPostTime: null });
                 localStorage.setItem('users', JSON.stringify(users));
                 localStorage.setItem('currentUser', JSON.stringify({ username }));
                 checkUserStatus();
@@ -658,12 +744,73 @@
                 const contents = document.querySelectorAll('.tab-content');
                 tabs.forEach(t => t.classList.remove('active'));
                 contents.forEach(c => c.classList.remove('active'));
+                document.getElementById('adminPanel').style.display = 'none';
                 if (tab === 'questions') {
                     document.querySelector('button[onclick="switchTab(\'questions\')"]').classList.add('active');
                     document.getElementById('questionsTab').classList.add('active');
                 } else if (tab === 'complaints') {
                     document.querySelector('button[onclick="switchTab(\'complaints\')"]').classList.add('active');
                     document.getElementById('complaintsTab').classList.add('active');
+                } else if (tab === 'admin') {
+                    document.querySelector('button[onclick="switchTab(\'admin\')"]').classList.add('active');
+                    document.getElementById('adminPanel').style.display = 'block';
+                    updateAdminStats();
+                }
+            };
+
+            window.editComplaint = function(complaintId) {
+                const complaints = JSON.parse(localStorage.getItem('minecraftComplaints') || '[]');
+                const complaint = complaints.find(c => c.id === complaintId);
+                if (complaint) {
+                    const newTitle = prompt('Новый заголовок:', complaint.title);
+                    const newText = prompt('Новый текст жалобы:', complaint.text);
+                    if (newTitle && newText) {
+                        complaint.title = newTitle;
+                        complaint.text = newText;
+                        localStorage.setItem('minecraftComplaints', JSON.stringify(complaints));
+                        // Перезагрузить жалобы
+                        complaintsList.innerHTML = '';
+                        loadComplaints();
+                    }
+                }
+            };
+
+            window.deleteComplaint = function(complaintId) {
+                if (confirm('Вы уверены, что хотите удалить эту жалобу?')) {
+                    const complaints = JSON.parse(localStorage.getItem('minecraftComplaints') || '[]');
+                    const updatedComplaints = complaints.filter(c => c.id !== complaintId);
+                    localStorage.setItem('minecraftComplaints', JSON.stringify(updatedComplaints));
+                    // Перезагрузить жалобы
+                    complaintsList.innerHTML = '';
+                    loadComplaints();
+                }
+            };
+
+            function updateAdminStats() {
+                const users = JSON.parse(localStorage.getItem('users') || '[]');
+                const questions = JSON.parse(localStorage.getItem('minecraftQuestions') || '[]');
+                const complaints = JSON.parse(localStorage.getItem('minecraftComplaints') || '[]');
+                document.getElementById('userCount').textContent = users.length;
+                document.getElementById('questionCount').textContent = questions.length;
+                document.getElementById('complaintCount').textContent = complaints.length;
+
+                const userList = document.getElementById('userList');
+                userList.innerHTML = users.map(user => `<p>${user.username} <button onclick="deleteUser('${user.username}')">Удалить</button></p>`).join('');
+            }
+
+            window.deleteUser = function(username) {
+                if (confirm(`Удалить пользователя ${username}?`)) {
+                    const users = JSON.parse(localStorage.getItem('users') || '[]');
+                    const updatedUsers = users.filter(u => u.username !== username);
+                    localStorage.setItem('users', JSON.stringify(updatedUsers));
+                    updateAdminStats();
+                }
+            };
+
+            window.clearAllData = function() {
+                if (confirm('Это действие удалит все данные! Продолжить?')) {
+                    localStorage.clear();
+                    location.reload();
                 }
             };
 
@@ -719,15 +866,65 @@
                 if (localStorage.getItem('adminLoggedIn') === 'true') {
                     adminLogin.style.display = 'none';
                     logoutBtn.style.display = 'block';
+                    document.getElementById('adminTabBtn').style.display = 'inline-block';
                     // Показать все формы ответа и кнопки модерации
                     document.querySelectorAll('.answer-form').forEach(form => form.style.display = 'block');
                     document.querySelectorAll('.moderation-btns').forEach(btns => btns.style.display = 'block');
                 } else {
                     adminLogin.style.display = 'block';
                     logoutBtn.style.display = 'none';
+                    document.getElementById('adminTabBtn').style.display = 'none';
                     // Скрыть все формы ответа и кнопки модерации
                     document.querySelectorAll('.answer-form').forEach(form => form.style.display = 'none');
                     document.querySelectorAll('.moderation-btns').forEach(btns => btns.style.display = 'none');
+                }
+            }
+
+            function checkCooldown(user) {
+                // Администраторы не имеют cooldown
+                if (localStorage.getItem('adminLoggedIn') === 'true') {
+                    return true;
+                }
+                const users = JSON.parse(localStorage.getItem('users') || '[]');
+                const userObj = users.find(u => u.username === user);
+                if (!userObj) {
+                    // Анонимный пользователь: cooldown 75 минут (3 раза больше 25)
+                    const lastPost = localStorage.getItem('anonymousLastPost');
+                    if (lastPost) {
+                        const now = new Date().getTime();
+                        const lastTime = new Date(lastPost).getTime();
+                        const limitMs = 75 * 60 * 1000; // 75 минут
+                        if ((now - lastTime) < limitMs) {
+                            const remaining = Math.ceil((limitMs - (now - lastTime)) / (60 * 1000));
+                            alert(`Вы можете публиковать посты только один раз в 75 минут. Осталось ${remaining} минут.`);
+                            return false;
+                        }
+                    }
+                    return true;
+                }
+                // Зарегистрированный пользователь: cooldown 25 минут
+                if (!userObj.lastPostTime) return true;
+                const now = new Date().getTime();
+                const lastTime = new Date(userObj.lastPostTime).getTime();
+                const limitMs = 25 * 60 * 1000; // 25 минут
+                if ((now - lastTime) >= limitMs) {
+                    return true;
+                } else {
+                    const remaining = Math.ceil((limitMs - (now - lastTime)) / (60 * 1000));
+                    alert(`Вы можете публиковать посты только один раз в 25 минут. Осталось ${remaining} минут.`);
+                    return false;
+                }
+            }
+
+            function updateLastPostTime(user) {
+                const users = JSON.parse(localStorage.getItem('users') || '[]');
+                const userObj = users.find(u => u.username === user);
+                if (userObj) {
+                    userObj.lastPostTime = new Date().toISOString();
+                    localStorage.setItem('users', JSON.stringify(users));
+                } else {
+                    // Анонимный пользователь
+                    localStorage.setItem('anonymousLastPost', new Date().toISOString());
                 }
             }
 
